--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3b3e42"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,5 +15,72 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:textSize="32sp"
+        android:textColor="@color/colorWhiteText"
+        android:lineSpacingExtra="8sp"
+        tools:text="안녕하세요
+Rivator 입니다!!"
+        android:layout_marginRight="115dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="456dp"
+        app:layout_constraintHorizontal_bias="0.358"
+        app:layout_constraintVertical_bias="0.052"
+        android:id="@+id/textView3" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="@color/colorWhiteText"
+        android:letterSpacing="-0.05"
+        tools:text="Rivator는 여러분의 실력 증진을
+응원합니다"
+        android:layout_marginRight="133dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.327"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="392dp"
+        app:layout_constraintVertical_bias="0.012" />
+
+    <Button
+        android:layout_width="328dp"
+        android:layout_height="56dp"
+        android:background="#14e4a2"
+        android:text="로그인"
+        android:layout_marginRight="13dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="19dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="452dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="108dp"
+        app:layout_constraintVertical_bias="1.0"
+        android:onClick="goToSignIn"
+        android:id="@+id/button"
+        app:layout_constraintHorizontal_bias="0.375" />
+    
+    <Button
+        android:layout_width="328dp"
+        android:layout_height="56dp"
+        android:background="#bcbcbc"
+        android:text="회원가입"
+        android:layout_marginRight="13dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="19dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="36dp"
+        android:onClick="goToSignUp"
+        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+</android.support.constraint.ConstraintLayout>
