--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.bong.rivatorproject.SelectActivity">
+    tools:context="com.rinc.bong.rivatorproject.com.rinc.bong.rivatorproject.SelectActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
