--- a/app/src/main/res/layout/activity_teacher_sign_up.xml
+++ b/app/src/main/res/layout/activity_teacher_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f0f0f0"
     android:orientation="vertical"
-    tools:context="com.rinc.bong.rivatorproject.com.rinc.bong.rivatorproject.TeacherSignUpActivity">
+    tools:context="com.rinc.bong.rivatorproject.TeacherSignUpActivity">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -14,227 +14,140 @@
             android:layout_weight="1">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_weight="1"
-                tools:layout_editor_absoluteY="8dp"
-                tools:layout_editor_absoluteX="8dp">
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="0dp"
-                android:layout_marginBottom="0dp"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:layout_width="96dp"
                     android:layout_height="96dp"
-                    android:layout_marginRight="7dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintHorizontal_bias="0.496"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="40dp"
-                    android:layout_marginBottom="468dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_bias="0.1"
+                    android:layout_marginBottom="35dp"
                     android:id="@+id/imageView"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="7dp" />
 
                 <EditText
-                    android:id="@+id/id"
+                    android:id="@+id/editId"
                     android:layout_width="312dp"
                     android:layout_height="48dp"
+                    android:layout_below="@+id/imageView"
+                    android:layout_marginBottom="2dp"
+                    android:layout_centerHorizontal="true"
                     android:ems="10"
                     android:background="@color/colorWhiteText"
                     android:inputType="textPersonName"
-                    android:hint="  아이디"
-                    android:layout_marginRight="24dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="24dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="440dp"
-                    app:layout_constraintHorizontal_bias="0.49"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp" />
+                    android:hint="  아이디" />
 
                 <EditText
-                    android:id="@+id/editText2"
+                    android:id="@+id/editPassword"
                     android:layout_width="312dp"
                     android:layout_height="48dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/editId"
                     android:ems="10"
                     android:background="@color/colorWhiteText"
                     android:inputType="textPersonName"
-                    android:hint="  비밀번호"
-                    android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@+id/id"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="393dp"
-                    app:layout_constraintHorizontal_bias="0.493"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" />
+                    android:hint="  비밀번호" />
 
                 <EditText
                     android:layout_width="312dp"
                     android:layout_height="48dp"
                     android:background="@color/colorWhiteText"
-                    android:layout_marginRight="8dp"
                     android:hint="  비밀번호 재확인"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="346dp"
-                    app:layout_constraintHorizontal_bias="0.493"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:id="@+id/editText" />
+                    android:layout_marginBottom="16dp"
+                    android:layout_below="@+id/editPassword"
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/editPassword2" />
 
                 <EditText
-                    android:id="@+id/editText3"
+                    android:id="@+id/editName"
                     android:layout_width="312dp"
                     android:layout_height="48dp"
+                    android:layout_below="@+id/editPassword2"
+                    android:layout_centerHorizontal="true"
                     android:background="@color/colorWhiteText"
                     android:hint="  이름"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText"
-                    android:layout_marginRight="24dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="24dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_marginBottom="2dp"
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp" />
                 <EditText
                     android:layout_width="312dp"
                     android:layout_height="48dp"
                     android:background="@color/colorWhiteText"
-                    android:layout_marginTop="4dp"
+                    android:layout_below="@+id/editName"
+                    android:layout_centerHorizontal="true"
                     android:hint="  전화번호"
-                    app:layout_constraintTop_toBottomOf="@+id/editText3"
-                    android:layout_marginLeft="24dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginRight="24dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:id="@+id/editText4"
+                    android:id="@+id/editPhoneNumber"
+                    android:layout_marginBottom="2dp"
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp" />
                 <TextView
                     android:layout_width="48dp"
                     android:layout_height="48dp"
+                    android:layout_below="@+id/editPhoneNumber"
                     android:background="#cfcfcf"
                     android:textAlignment="center"
+                    android:layout_marginBottom="2dp"
                     android:text="\n지역"
-                    android:layout_marginRight="288dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="24dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintHorizontal_bias="0.49"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText4"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="288dp"
-                    android:id="@+id/textView5" />
+                    android:id="@+id/textView5"
+                    android:layout_alignStart="@+id/editPassword" />
 
                 <Spinner
                     android:id="@+id/citySpinner"
                     android:layout_width="86dp"
                     android:layout_height="48dp"
+                    android:layout_below="@+id/editPhoneNumber"
+                    android:layout_toRightOf="@+id/textView5"
                     android:background="@color/colorWhiteText"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText4"
-                    app:layout_constraintLeft_toRightOf="@+id/textView5"
-                    android:layout_marginLeft="4dp" />
+                    android:layout_marginLeft="2dp" />
                 <Spinner
                     android:id="@+id/districSpinner"
                     android:layout_width="88dp"
                     android:layout_height="48dp"
+                    android:layout_toRightOf="@+id/citySpinner"
+                    android:layout_below="@+id/editPhoneNumber"
                     android:background="@color/colorWhiteText"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText4"
-                    app:layout_constraintHorizontal_bias="0.367"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp"
-                    app:layout_constraintLeft_toLeftOf="@+id/citySpinner" />
+                    android:layout_marginLeft="2dp" />
 
                 <Spinner
                     android:id="@+id/townSpinner"
-                    android:layout_width="90dp"
+                    android:layout_width="86dp"
                     android:layout_height="48dp"
+                    android:layout_toRightOf="@+id/districSpinner"
+                    android:layout_below="@+id/editPhoneNumber"
                     android:background="@color/colorWhiteText"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintHorizontal_bias="0.652"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintTop_toBottomOf="@+id/editText4"
-                    app:layout_constraintLeft_toLeftOf="@+id/districSpinner"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" />
+                    android:layout_marginLeft="2dp" />
                 <TextView
                     android:layout_width="72dp"
                     android:layout_height="48dp"
                     android:background="#cfcfcf"
                     android:text="\n주요과목"
+                    android:layout_alignStart="@+id/textView5"
                     android:textAlignment="center"
-                    android:layout_marginTop="21dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintHorizontal_bias="0.126"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_below="@+id/textView5"
                     android:id="@+id/textView6" />
 
                 <Spinner
                     android:id="@+id/spinner"
                     android:layout_width="242dp"
                     android:layout_height="48dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
                     android:background="@color/colorWhiteText"
-                    app:layout_constraintLeft_toRightOf="@+id/textView6"
-                    android:layout_marginTop="21dp"
-                    app:layout_constraintTop_toBottomOf="@+id/districSpinner"
-                    android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginEnd="8dp" />
+                    android:layout_below="@+id/citySpinner"
+                    android:layout_toRightOf="@+id/textView6"/>
 
                 <CheckBox
                     android:id="@+id/checkBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="21dp"
                     android:text="약관동의"
-                    android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="8dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginTop="18dp"
-                    android:paddingBottom="0dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6"
-                    app:layout_constraintHorizontal_bias="0.137"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" />
-            </android.support.constraint.ConstraintLayout>
+                    android:layout_alignStart="@+id/textView6"
+                    android:layout_below="@+id/textView6"/>
         </RelativeLayout>
         </ScrollView>
 
@@ -243,11 +156,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_weight="8">
+        android:layout_weight="10">
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#dfdfdf"
+            android:onClick="back"
             android:text="이전으로"
             android:layout_weight="1"/>
 
@@ -255,6 +169,7 @@
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:onClick="next"
             android:layout_weight="1"
             android:background="#14e4a2"
             android:text="다음으로" />
