--- a/app/src/main/res/layout/activity_signup_degree.xml
+++ b/app/src/main/res/layout/activity_signup_degree.xml
@@ -8,75 +8,87 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <ImageView
             android:id="@+id/img_degree"
             android:layout_width="0dp"
-            android:layout_height="123dp"
+            android:layout_height="200dp"
             android:background="@color/colorImageBackground"
-            tools:layout_editor_absoluteY="81dp"
-            tools:layout_editor_absoluteX="8dp" />
+            android:layout_marginRight="8dp"
+            sl:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            sl:layout_constraintLeft_toLeftOf="parent"
+            sl:layout_constraintHorizontal_bias="0.0"
+            sl:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="0dp" />
 
-        <Button
-            android:id="@+id/btn_degree_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorNextBtn"
-            android:text="다음으로"
-            android:textColor="@color/colorWhiteText"
-            sl:scale_height="56"
-            sl:scale_left="180"
-            sl:scale_textsize="16"
-            sl:scale_top="504"
-            sl:scale_width="180"
-            tools:layout_editor_absoluteY="81dp"
-            tools:layout_editor_absoluteX="0dp" />
 
         <EditText
             android:id="@+id/editText_degree_first"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="394dp"
+            android:layout_height="271dp"
             android:background="@null"
             android:hint="분류"
-            sl:scale_height="56"
-            sl:scale_left="24"
-            sl:scale_textsize="16"
-            sl:scale_top="200"
-            sl:scale_width="336"
-            tools:layout_editor_absoluteY="81dp"
-            tools:layout_editor_absoluteX="0dp" />
+            android:layout_marginTop="8dp"
+            sl:layout_constraintTop_toBottomOf="@+id/editText_degree_second"
+            sl:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            sl:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            sl:layout_constraintLeft_toLeftOf="parent"
+            sl:layout_constraintHorizontal_bias="1.0"
+            sl:layout_constraintVertical_bias="0.0" />
 
-        <Button
-            android:id="@+id/btn_degree_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorBackBtn"
-            android:text="이전으로"
-            android:textColor="@color/colorWhiteText"
-            sl:scale_height="56"
-            sl:scale_textsize="16"
-            sl:scale_top="504"
-            sl:scale_width="180"
-            tools:layout_editor_absoluteY="81dp"
-            tools:layout_editor_absoluteX="0dp" />
+
+
 
         <EditText
             android:id="@+id/editText_degree_second"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
             android:background="@null"
+            android:textSize="16sp"
             android:gravity="top"
-            android:hint="캡션"
-            sl:scale_height="248"
-            sl:scale_left="24"
-            sl:scale_textsize="16"
-            sl:scale_top="272"
-            sl:scale_width="336"
-            tools:layout_editor_absoluteY="81dp"
-            tools:layout_editor_absoluteX="0dp" />
-
-
+            android:hint="  캡션"
+            android:layout_marginRight="8dp"
+            sl:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            sl:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            sl:layout_constraintTop_toBottomOf="@+id/img_degree"
+            sl:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            sl:layout_constraintHorizontal_bias="0.022"
+            sl:layout_constraintVertical_bias="0.0"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
     </android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/btn_degree_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorBackBtn"
+            android:text="이전으로"
+            android:textColor="@color/colorWhiteText" />
+
+        <Button
+            android:id="@+id/btn_degree_next"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorNextBtn"
+            android:text="다음으로"
+            android:textColor="@color/colorWhiteText" />
+    </LinearLayout>
 </LinearLayout>
