--- a/app/src/main/res/layout/activity_signup_degree.xml
+++ b/app/src/main/res/layout/activity_signup_degree.xml
@@ -29,8 +29,8 @@
 
         <EditText
             android:id="@+id/editText_degree_first"
-            android:layout_width="394dp"
-            android:layout_height="271dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@null"
             android:hint="분류"
             android:layout_marginTop="8dp"
@@ -41,8 +41,8 @@
             sl:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             sl:layout_constraintLeft_toLeftOf="parent"
-            sl:layout_constraintHorizontal_bias="1.0"
-            sl:layout_constraintVertical_bias="0.0" />
+            sl:layout_constraintHorizontal_bias="0.0"
+            sl:layout_constraintVertical_bias="0.111" />
 
 
 
@@ -54,7 +54,8 @@
             android:background="@null"
             android:textSize="16sp"
             android:gravity="top"
-            android:hint="  캡션"
+            android:hint="캡션"
+
             android:layout_marginRight="8dp"
             sl:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
@@ -63,8 +64,8 @@
             sl:layout_constraintTop_toBottomOf="@+id/img_degree"
             sl:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            sl:layout_constraintHorizontal_bias="0.022"
-            sl:layout_constraintVertical_bias="0.0"
+            sl:layout_constraintHorizontal_bias="0.0"
+            sl:layout_constraintVertical_bias="0.057"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" />
     </android.support.constraint.ConstraintLayout>
