--- a/app/src/main/res/layout/activity_signup_degree.xml
+++ b/app/src/main/res/layout/activity_signup_degree.xml
@@ -23,13 +23,12 @@
             sl:layout_constraintHorizontal_bias="0.0"
             sl:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="0dp" />
+            android:layout_marginEnd="8dp" />
 
 
         <EditText
             android:id="@+id/editText_degree_first"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@null"
             android:hint="분류"
@@ -42,7 +41,9 @@
             android:layout_marginLeft="8dp"
             sl:layout_constraintLeft_toLeftOf="parent"
             sl:layout_constraintHorizontal_bias="0.0"
-            sl:layout_constraintVertical_bias="0.111" />
+            sl:layout_constraintVertical_bias="0.111"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
 
 
@@ -80,6 +81,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/colorBackBtn"
+            android:onClick="back"
             android:text="이전으로"
             android:textColor="@color/colorWhiteText" />
 
@@ -88,6 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="next"
             android:background="@color/colorNextBtn"
             android:text="다음으로"
             android:textColor="@color/colorWhiteText" />
