강사 회원가입 프론트 마무리

--- a/app/src/main/res/layout/activity_signup_portfolio.xml
+++ b/app/src/main/res/layout/activity_signup_portfolio.xml
@@ -1,84 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     xmlns:sl="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <com.ssomai.android.scalablelayout.ScalableLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        sl:scale_base_height="560"
-        sl:scale_base_width="360">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <ImageView
-
-            android:id="@+id/img_portfolio"
-            android:layout_width="150dp"
-            android:layout_height="123dp"
+            android:id="@+id/img_degree"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:background="@color/colorImageBackground"
-            sl:scale_height="200"
-            sl:scale_width="360" />
+            android:layout_marginRight="8dp"
+            sl:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            sl:layout_constraintLeft_toLeftOf="parent"
+            sl:layout_constraintHorizontal_bias="0.0"
+            sl:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
+
 
         <EditText
-            android:id="@+id/editText_porfolio_first"
-            android:layout_width="wrap_content"
+            android:id="@+id/editText_degree_first"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@null"
             android:hint="분류"
-            sl:scale_height="56"
-            sl:scale_left="24"
-            sl:scale_textsize="16"
-            sl:scale_top="200"
-            sl:scale_width="336" />
+            android:layout_marginTop="8dp"
+            sl:layout_constraintTop_toBottomOf="@+id/editText_degree_second"
+            sl:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            sl:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            sl:layout_constraintLeft_toLeftOf="parent"
+            sl:layout_constraintHorizontal_bias="0.0"
+            sl:layout_constraintVertical_bias="0.111"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorLine"
-            sl:scale_height="0.5"
-            sl:scale_top="256"
-            sl:scale_width="360" />
+
+
 
         <EditText
-            android:id="@+id/editText_porfolio_second"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/editText_degree_second"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
             android:background="@null"
+            android:textSize="16sp"
             android:gravity="top"
             android:hint="캡션"
-            sl:scale_height="248"
-            sl:scale_left="24"
-            sl:scale_textsize="16"
-            sl:scale_top="272"
-            sl:scale_width="336" />
+
+            android:layout_marginRight="8dp"
+            sl:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            sl:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            sl:layout_constraintTop_toBottomOf="@+id/img_degree"
+            sl:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            sl:layout_constraintHorizontal_bias="0.0"
+            sl:layout_constraintVertical_bias="0.057"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
+    </android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_portfolio_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/btn_degree_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@color/colorBackBtn"
+            android:onClick="back"
             android:text="이전으로"
-            android:textColor="@color/colorWhiteText"
-            sl:scale_height="56"
-            sl:scale_textsize="16"
-            sl:scale_top="504"
-            sl:scale_width="180" />
+            android:textColor="@color/colorWhiteText" />
 
         <Button
-            android:id="@+id/btn_portfolio_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/btn_degree_next"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="finishSignUp"
             android:background="@color/colorNextBtn"
-            android:text="다음으로"
-            android:textColor="@color/colorWhiteText"
-            sl:scale_height="56"
-            sl:scale_left="180"
-            sl:scale_textsize="16"
-            sl:scale_top="504"
-            sl:scale_width="180" />
-
-
-    </com.ssomai.android.scalablelayout.ScalableLayout>
-
+            android:text="회원가입 완료"
+            android:textColor="@color/colorWhiteText" />
+    </LinearLayout>
 </LinearLayout>
