--- a/app/src/main/res/layout/activity_teacher_sign_up.xml
+++ b/app/src/main/res/layout/activity_teacher_sign_up.xml
@@ -154,9 +154,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="10">
+        android:layout_height="56dp"
+        android:orientation="horizontal">
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
