전체 회원가입 프론트 마무리

--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -36,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/student"
             android:layout_centerHorizontal="true"
+            android:onClick="gotoStudentSignUp"
             android:text="강사 회원으로 가입하고자 하는 분은\n이 곳을 터치해 진행해주세요."
             android:textAlignment="center"
             android:textColor="#efefef"/>
