--- a/app/src/main/res/layout/activity_signup_terms_agree.xml
+++ b/app/src/main/res/layout/activity_signup_terms_agree.xml
@@ -76,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:letterSpacing="-0.1"
+            android:onClick="gotoDetail"
             android:text="@string/agree_one"
             android:textColor="@color/colorDarkText"
             android:layout_marginStart="18dp"
