--- a/app/src/main/res/layout/activity_teacher_sign_up.xml
+++ b/app/src/main/res/layout/activity_teacher_sign_up.xml
@@ -19,6 +19,7 @@
                 <ImageView
                     android:layout_width="96dp"
                     android:layout_height="96dp"
+                    android:src="@drawable/teacher"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="40dp"
                     android:layout_marginBottom="35dp"
