--- a/app/src/main/res/layout/custom_action_bar.xml
+++ b/app/src/main/res/layout/custom_action_bar.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center_vertical"
+    android:background="@color/greenBar"
     style="?android:attr/borderlessButtonStyle"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/btnClose"
-        android:layout_width="19dp"
-        android:layout_height="19dp"
-        android:src="@drawable/close"
-        android:layout_marginLeft="14.5dp"
-        android:layout_centerVertical="true"
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorWhiteText"
+        android:background="@color/greenBar"
+        android:textAlignment="center"
+        android:text="←"
+        android:textSize="14pt"
         style="?android:attr/borderlessButtonStyle"
         android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/title"
         android:textSize="20sp"
-        android:textColor="@color/colorDarkText"
+        android:textColor="@color/colorWhiteText"
         android:gravity="center_vertical"
         android:textAlignment="center"
         android:layout_width="match_parent"
