java.lang.RuntimeException: Canvas: trying to draw too large(132710400bytes) bitmap. 오류
 drawable -> drawable -xxhdpi 로 바꿔서 오류 픽스

--- a/app/src/main/res/drawable-xxhdpi/button_shape.xml
+++ b/app/src/main/res/drawable-xxhdpi/button_shape.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="30dp"
     android:shape="rectangle">
-    <solid android:color="#dfdfdf"></solid>
+    <solid android:color="#dfdfdf" />
 </shape>
 
