--- a/app/src/main/res/drawable-xxhdpi/button_shape2.xml
+++ b/app/src/main/res/drawable-xxhdpi/button_shape2.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="30dp"
     android:shape="rectangle">
-    <solid android:color="#14e4a2"></solid>
+    <solid android:color="#14e4a2" />
 </shape>
 
