--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,41 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textLayout"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/teacherList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:letterSpacing="-0.06"
+                    android:text="강사리스트"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_margnRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/moreText"
+                    android:textSize="12sp"
+                    android:letterSpacing="-0.1"
+                    android:text="@string/more" />
+
+            </LinearLayout>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textLayout"></ListView>
         </RelativeLayout>
     </ScrollView>
 
