--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/teacherList"
+                    android:id="@+id/teacherListText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
@@ -45,7 +45,8 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textLayout"></ListView>
+                android:layout_below="@+id/textLayout"
+                android:id="@+id/teacherList"></ListView>
         </RelativeLayout>
     </ScrollView>
 
