--- a/app/src/main/res/layout/teacher_listview.xml
+++ b/app/src/main/res/layout/teacher_listview.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="64dp">
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:id="@+id/teacherImgage"
         android:src="@drawable/teacher"
         android:layout_marginLeft="23dp"
         android:layout_marginTop="12dp"
@@ -18,11 +19,12 @@
         android:layout_marginTop="16dp"
         android:textAppearance="?textAppearanceLargePopupMenu"
         android:layout_marginLeft="81dp"
-        >
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="웹프로그래밍"
+        android:id="@+id/subject"
         android:layout_marginBottom="12dp"
         android:layout_marginTop="8dp"
         android:layout_below="@+id/teacherName"
