--- a/app/src/main/res/layout/teacher_listview.xml
+++ b/app/src/main/res/layout/teacher_listview.xml
@@ -2,15 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="64dp">
+    android:layout_height="wrap_content">
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/teacherImgage"
         android:src="@drawable/teacher"
         android:layout_marginLeft="23dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"/>
+        android:layout_centerVertical="true"
+        android:layout_marginStart="23dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
