--- a/app/src/main/res/menu/main_menu_actionbar.xml
+++ b/app/src/main/res/menu/main_menu_actionbar.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
-        android:id="@+id/searcg"
+        android:id="@+id/search"
         android:orderInCategory="1"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:icon="@drawable/search"/>
     <item
         android:id="@+id/aboutUs"
         android:orderInCategory="2"
-        android:text="About R inc."/>
+        android:showAsAction="never"
+        android:title="About R inc."/>
 </menu>
